src/objects/Calendar_Values__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for the Calendar to values to populate the Program Calendar Settings on the Calendar</description>
    <fields>
        <fullName>Color_Code__c</fullName>
        <description>This Field will store the chart color code of any picklist value</description>
        <label>Color Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is Data such as from the Tags object for Brands or Territories</description>
        <inlineHelpText>If it is Data such as from the Tags object for Brands or Territories</inlineHelpText>
        <label>IsData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <label>Setting</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Calendar Values</label>
</CustomObject>